Added comments to the body
Learning how to do comments

--- a/2-4.html
+++ b/2-4.html
@@ -6,8 +6,10 @@
     <title>Page 4</title>
 </head>
 <body>
+    <!-- comment - part 1-->
     <H1>Page 4</H1>
     Hello
+    <!-- start of secondary content-->
     Lorem ipsum stuff
 </body>
 </html>
