--- a/2-5.html
+++ b/2-5.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Page V</title>
 </head>
 <body>
     <h1>Lesson 5: Inline vs. Block-Level Elements</h1>
@@ -11,9 +11,13 @@
     <P> 2: Lorem 2</P>
     <h2>Learning to use container</h2>
     <p></p>
-    <Div> class="warning"
-    <img src="photos/library/IMG_0538.HEIC" alt="rider">
-    <p> Ride into the mountains</p>
+    <Div class="warning"> 
+        <img    src="images/image1.jpeg" alt="rider">
+        <p> Ride into the mountains</p>
     </Div>
+    <ol>
+        <li> Rider 1</li>
+        <li> Rider 2</li>
+    </ol>
 </body>
 </html>
