Added a Folder/Imported a File

--- a/2-6.html
+++ b/2-6.html
@@ -1,18 +1,41 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page VI</title>
-</head>
-<body>
-    <h1> What is Lorem Ipsum?</h1>
-    <p> </p>
-    Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-    when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-    It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-</body>
+<!DOCTYPE html>
+<html lang="en-US">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		<title>HTML and CSS for Complete Beginners: Example 2-6</title>
+
+		<!-- This CSS and font is purely for presentational purposes. -->
+		<link rel="stylesheet" href="css/presentation.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet" />
+
+		<style>
+			/* Styling for demo purposes */
+			section > div {
+				background-color: rgb(179, 215, 215);
+				display: flex;
+				margin-bottom: 1rem;
+			}
+
+			div div {
+				background-color: rgb(142, 181, 181);
+			}
+		</style>
+	</head>
+	<body>
+		<section class="learn">
+			<!-- Practice area start -->
+
+
+
+			<!-- Practice area end -->
+		</section>
+
+		<section class="preview" data-content="lesson 2-6: The <div> element">
+			<img width="414px" src="images/reference/real-estate-statistics.png" alt="Real estate statistics" />
+		</section>
+	</body>
 </html>
