--- a/2-6.html
+++ b/2-6.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="my lesson">
 
 		<title>HTML and CSS for Complete Beginners: Example 2-6</title>
 
