--- a/2-6.html
+++ b/2-6.html
@@ -29,8 +29,31 @@
 	<body>
 		<section class="learn">
 			<!-- Practice area start -->
+        <p>
+            <div>
+                Icon: Total Home Properties
+                <div>
+                510
+                Propertoes in Total
+                </div>
+            </div>
+            <p>
 
+            <div>
+                Icon: Properties for Sale
+                <div>
+                253
+                Properties for Sale
+                </div>
+            </div>
 
+            <div>
+                Icon: Properties for Rental
+                <div>
+                257
+                Properties for Rental
+                </div>
+            </div>
 
 			<!-- Practice area end -->
 		</section>
