--- a/2-7.html
+++ b/2-7.html
@@ -17,38 +17,43 @@
 		<section class="learn">
 			<!-- Practice area start -->
 
-			<h1> What is the Neubrutalism Web Design Trend?</h1>
-
-			Move aside brutalism, there's a new web design trend in town. Welcome to the stage neubrutalism, which is a refreshing combination of the brutalist trend as well as the modern, minimalist trend that's graced our screens for many years now. Read on for key features of this new design including what to look out for, real-world examples, plus a few neubrutalist-inspired web design templates from ThemeForest.
-
-			Okay, So What Actually Is Neubrutalism?
-
-			Friends (or foes) of the brutalism web design trend will know that it's a style that earned its name due to its affinity to brutalism in architecture, i.e. it rejects decorative pomp and ceremony in favor of rough, unfinished surfaces, unusual shapes, solid materials, and contrasting small features. The concrete-heavy Barbican in London is a classic example of brutalist architecture.
-
-			It certainly won't be to everyone's tastes, but brutalist web design can be seen as rejecting the more popular, softer web and instead adopting harsh, raw, or uncomfortable forms. To see more examples of brutalist websites, check out brutalistwebsites.com.
-
-			A Word on Neubrutalist Typography
-
-			When you scroll through the neubrutalist website examples below you'll likely notice the typography used for the headings—they almost all use quirky grotesque typefaces.
-
-			They're often a bit beyond what we'd define as grotesque (or grotesk) and drift into the display font world, but however you define them they certainly make an impact. Get unlimited access</strong> to plenty of grotesque web fonts on Envato Elements right now!
-
-			“A grotesque sans serif font lacks a serif, which is a little extra stroke commonly seen at the end of some typefaces. It has, instead, a more abrupt edge.”
-			— Daisy Ein, 34 Best Grotesque Fonts
-
-			Real-World Examples of Neubrutalism
-
-			Read on for 10 examples of neubrutalist design hitting the web right now. Which is your favorite?
-
-			1. Gumroad
-
-			Check out the muted, clashing, gradient-free colors combined with thick black outlines. Typography is modern and easy to read, setting it apart from the often clunkier styles preferred within brutalist design. Animations also help to modernize brutalist design.
-
-			2. Figma
-
-			One of the most famous examples of neubrutalist web design, Figma avoids shadows across all imagery, instead opting for sharper, darker black lines surrounding the shapes. Clashing hues such as orange and yellow also feel a little challenging on the eye which helps them to stand out.
-
-			This is an excerpt from this article on Tutsplus.
+			<div>
+                <h1> What is the Neubrutalism Web Design Trend?</h1>
+                <p>Move aside <a href="https://webdesign.tutsplus.com/articles/its'tough-out-there-a-look-at-brutalism-in-web-design--cms-26545" target="_blank">brutalism</a>, there's a new web design trend in town. Welcome to the stage neubrutalism, which is a refreshing combination of the brutalist trend as well as the modern, minimalist trend that's graced our screens for many years now. Read on for key features of this new design including what to look out for, real-world examples, plus a few neubrutalist-inspired web design templates from ThemeForest.</p>
+                <h2>Okay, So What Actually Is Neubrutalism?</h2>
+                <p>
+                                Friends (or foes) of the brutalism web design trend will know that it's a style that earned its name due to its affinity to brutalism in architecture, i.e. it rejects decorative pomp and ceremony in favor of rough, unfinished surfaces, unusual shapes, solid materials, and contrasting small features. The concrete-heavy Barbican in London is a classic example of brutalist architecture.
+                                It certainly won't be to everyone's tastes, but brutalist web design can be seen as rejecting the more popular, softer web and instead adopting harsh, raw, or uncomfortable forms. To see more examples of brutalist websites, check out brutalistwebsites.com.
+                            </p>
+                <h2>A Word on Neubrutalist Typography</h2>
+                <p>
+                                When you scroll through the neubrutalist website examples below you'll likely notice the typography used for the headings—they almost all use quirky <em>grotesque</em> typefaces.
+                                They're often a bit beyond what we'd define as <em>grotesque</em> (or <em>grotesk</em>) and drift into the <em>display</em> font world, but however you define them they certainly make an impact. Get <strong>unlimited access</strong> to plenty of grotesque web fonts on Envato Elements right now!
+                                <blockquote cite="https://design.tutplus.com/articles/34-best-grotesque-fonts-typefaces-ready-to-download--cms-36355?_ga=2.261220047.396533376.1653417745-188955695.1653417745">
+                                    <p>“A grotesque sans serif font lacks a serif, which is a little extra stroke commonly seen at the end of some typefaces. It has, instead, a more abrupt edge.”</p>
+                                    <p>— Daisy Ein, <cite>34 Best Grotesque Fonts</cite></p>
+                                </blockquote>
+                            </p>
+                <h2>Real-World Examples of Neubrutalism</h2>
+                <p>Read on for 10 examples of neubrutalist design hitting the web right now. Which is your favorite?</p>
+                <p>
+                                <ol>
+                                                <li>
+                                                    <h3>Gumroad</h3>
+                                                    <p>Check out the muted, clashing, gradient-free colors combined with thick black outlines. Typography is modern and easy to read, setting it apart from the often clunkier styles preferred within brutalist design. Animations also help to modernize brutalist design.</p>
+                                                </li>
+                                                <li>
+                                                    <h3>Figma</h3>
+                                                    <p>
+                                                        One of the most famous examples of neubrutalist web design, Figma avoids shadows across all imagery, instead opting for sharper, darker black lines surrounding the shapes. Clashing hues such as orange and yellow also feel a little challenging on the eye which helps them to stand out.
+                                                        
+                                                    </p>
+                                                </li>
+                                            </ol>
+                                            
+                            </p>
+                            <p><small>This is an excerpt from this article on Tutsplus.</small></p>
+            </div>
 
 			<!-- Practice area end -->
 		</section>
