Formatted Original Text
Added formatting elements
Added image elements
Added citation elements

--- a/2-7.html
+++ b/2-7.html
@@ -54,7 +54,14 @@
                             </p>
                             <p><small>This is an excerpt from this article on Tutsplus.</small></p>
             </div>
-
+<div>
+    <p>
+        <figure>
+            <img src="images/I1.jpeg" alt="Road Racer">
+            <figcaption>My First Inline Image</figcaption>
+        </figure>
+    </p>
+</div>
 			<!-- Practice area end -->
 		</section>
 
